# httpverbs

./: .gitignore  .travis.yml  CMakeLists.txt  CTestCustom.cmake.in  CTestCustom.ctest  httpverbs-config.cmake.in
include/httpverbs/: c_file.h  config.h  enable_library.h  exceptions.h  guard.h  header_dict.h  httpverbs.h  request.h  response.h  stream.h
src/: ca_info.h  config.h.in  enable_library.cc  exceptions.cc  guard.cc  header_algo.h  header_dict.cc  pooled_perform.cc  pooled_perform.h  request.cc  response.cc  strings.h
src/stdex/: defer.h  string_view.h
tests/: run_test_server.bat.in  run_test_server.in  run_test_server.sh  stop_test_server.bat  stop_test_server.sh  test_bodies.cc  test_data.h  test_enable_library.cc  test_exceptions.cc  test_guard.cc  test_header_dict.cc  test_headers.cc  test_http.cc  test_methods.cc  test_request.cc  test_response.cc  test_server.py  test_streams.cc
